# hugr-phase-fold

./: LICENSE  README.md  pyproject.toml
hugr_phase_fold/: analysis.py  domain.py  folder.py  test_folder.py  util.py
tests/: test_folder.py
