[project]
name = "hugr-phase-fold"
version = "0.0.1"
authors = [{ name = "Mark Koch", email = "mark.koch@quantinuum.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.10,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "galois>=0.4.4",
    "hugr>=0.10.2",
    "tket2-exts>=0.3.0",
    "tket2>=0.6.0",
]

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "mypy>=0.991",
    "ruff>=0.9.2",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["hugr_phase_fold"]

[tool.mypy]
files = ["hugr_phase_fold"]
strict = true
allow_redefinition = true